feat: add mcp server
