# docs/swagger.yaml
@@ -124,6 +124,7 @@ definitions:
     - updated-at
     - checklist
     - row-link
+    - mermaid
     type: string
     x-enum-varnames:
     - ColumnTypeText
@@ -148,6 +149,7 @@ definitions:
     - ColumnTypeUpdatedAt
     - ColumnTypeChecklist
     - ColumnTypeRowLink
+    - ColumnTypeMermaid
   models.PagedReferencingRows:
     properties:
       data:
@@ -497,6 +499,8 @@ definitions:
         type: string
       id:
         type: integer
+      mcp_enabled:
+        type: boolean
       name:
         type: string
     type: object
